<?xml version="1.0" encoding="utf-8"?>
<!--
	Licensed to the Apache Software Foundation (ASF) under one
    or more contributor license agreements.  See the NOTICE file
    distributed with this work for additional information
    regarding copyright ownership.  The ASF licenses this file
    to you under the Apache License, Version 2.0 (the
    "License"); you may not use this file except in compliance
    with the License.  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing,
    software distributed under the License is distributed on an
    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
    KIND, either express or implied.  See the License for the
    specific language governing permissions and limitations
    under the License.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <TextView
            android:id="@+id/introMsg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:text="@string/intro"
            android:textSize="14dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/introMsg" >

            <EditText
                android:id="@+id/searchField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" >
            </EditText>

            <ImageView
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="onSearchBtnClicked"
                android:src="@android:drawable/ic_menu_search" />

            <ImageView
                android:id="@+id/clearBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:onClick="onClearBtnClicked"
                android:src="@android:drawable/ic_menu_delete" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/resultLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/searchLayout"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vat_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vat"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vat_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tax_office_code_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax_office_code"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tax_office_code_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tax_office_description_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tax_office_description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tax_office_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/vat_indication_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vat_indication"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vat_indication_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/name_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/title_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/address_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/number_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/number_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/zip_code_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zip_code"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/zip_code_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/area_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/area_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/start_date_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/start_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/end_date_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/end_date_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/telephone_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telephone"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/telephone_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/fax_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fax"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fax_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/activity_description_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_description"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/activity_description_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>